--- a/package.json
+++ b/package.json
@@ -28,12 +28,34 @@
   "devDependencies": {
     "@types/node": "^12.0.2",
     "@typescript-eslint/eslint-plugin": "^1.9.0",
-    "@typescript-eslint/parser": "^1.9.0"
+    "@typescript-eslint/parser": "^1.9.0",
+    "eslint": "^5.16.0",
+    "typescript": "^3.4.5"
   },
   "eslintConfig": {
+    "env": {
+      "es6": true,
+      "node": true
+    },
+    "parserOptions": {
+      "ecmaVersion": 2018,
+      "sourceType": "module"
+    },
     "parser": "@typescript-eslint/parser",
     "plugins": [
       "@typescript-eslint"
-    ]
+    ],
+    "extends": [
+      "eslint:recommended",
+      "plugin:@typescript-eslint/recommended"
+    ],
+    "rules": {
+      "indent": [ "error","tab" ],
+      "linebreak-style": [ "error", "unix" ],
+      "quotes": [ "error", "single" ],
+      "semi": [ "error", "always" ],
+      "@typescript-eslint/indent": [ "error", "tab" ],
+      "@typescript-eslint/explicit-function-return-type": "off"
+    }
   }
 }
