--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "questable",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "description": "Questable API Client written in Node.js",
   "main": "dist/index.js",
   "scripts": {
@@ -53,11 +53,26 @@
       "plugin:@typescript-eslint/recommended"
     ],
     "rules": {
-      "indent": [ "error","tab" ],
-      "linebreak-style": [ "error", "unix" ],
-      "quotes": [ "error", "single" ],
-      "semi": [ "error", "always" ],
-      "@typescript-eslint/indent": [ "error", "tab" ],
+      "indent": [
+        "error",
+        "tab"
+      ],
+      "linebreak-style": [
+        "error",
+        "unix"
+      ],
+      "quotes": [
+        "error",
+        "single"
+      ],
+      "semi": [
+        "error",
+        "always"
+      ],
+      "@typescript-eslint/indent": [
+        "error",
+        "tab"
+      ],
       "@typescript-eslint/explicit-function-return-type": "off"
     }
   }
